final secound push

--- a/index.html
+++ b/index.html
@@ -46,7 +46,6 @@
     </div>
 </section>
 <section class="latest-project" >
-    <H1 class="jhamela">MEHEDI</H1>
     <div class="team">
     <div class="projects">
         <img src="images/image 4.png" alt="">
@@ -62,7 +61,7 @@
         <img src="images/image 5.png" alt="">
         
         <h2>Creative Agency</h2>
-        < <p>Lorem Ipsum is simply dummy text of the 
+         <p>Lorem Ipsum is simply dummy text of the 
             printing and typesetting industry.
             </p>
 
